package com.example.ex02512;

import android.widget.TextView;

public class Bicycle extends Vehicle{
    TextView tv;
    public Bicycle(){

    }
    public void start(){
        tv.setText("Bicycle started");
    }
    public void stop(){

    }
    public void accelerate(){

    }

}
