package com.example.ex02512;

public class Motorcycle extends Vehicle{
    public Motorcycle(){

    }
    public void start(){

    }
    public void stop(){

    }
    public void accelerate(){

    }
}
